# vuf3

./: .gitignore  README.md  pyproject.toml  train_video_classification.py
configuration/tasks/video_classification_training/: dataset.json  dataset.prod.json  model.json  training.dev.json  training.json
data/classification/: classification_dataset.py  classification_dataset_configuration.py  classification_dataset_description.py  classification_mapping.py
data/classification/transforms/: indexed_classification_dataset.py  transform_classification_dataset.py
data/classification/video/: video_classification_data_module.py  video_classification_dataset.py  video_classification_dataset_configuration.py  video_classification_dataset_factories.py  video_classification_preprocessing_dataset.py
data/preprocessing/video/: video_default_preprocessor.py  (+3 more)
data/video/: video_clip.py  video_clip_description.py
models/: model_configuration.py  model_description.py  model_task.py
models/classification/: classification_metric_factories.py  classification_model_configuration.py  classification_model_description.py  classification_model_factories.py  classification_model_provider.py  classification_module.py
models/export/: onnx_export.py
models/video/: video_model_configuration.py
training/: training_configuration.py
training/classification/: classification_training_configuration.py  classification_training_factories.py
utilities/: json.py  paths.py  random.py  tables.py
utilities/configuration/: configuration_reader.py  configuration_utilities.py
(+28 files in other folders)
