[tool.poetry]
name = "vuf3"
version = "0.1.0"
description = ""
authors = ["Bernhard Glück <business@bernhardglueck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
pytorch-lightning = "^1.8.0.post1"
dataclass-wizard = "^0.22.2"
prettytable = "^3.5.0"
onnx = "^1.12.0"
wandb = "^0.13.5"
onnxruntime-gpu = "^1.13.1"
pytorchvideo = "^0.1.5"
onnxsim = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
